feat(exceptions): more custom exceptions